--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,36 @@
 /* basic formatting for the entirety of the page */
 
-body {
+/* body {
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: #777777;
     width: 100vw;
     height: 100%;
     margin: 0 auto;
     position: fixed;
-    box-sizing: border-box;
     left: 0;
     top: 0;
     background: #ffffff;
     overflow: auto;
+} */
+
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777;
+    background: white;
+    height:100%;
+    width: 100%;
+  }
+
+  * {
+    box-sizing: border-box;
+    margin: 0;
+  }
+
+html,
+body {
+  height: 100%;
 }
 
 /* formatting for just the top of the page including name and navigation bar */
@@ -21,12 +40,41 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
+    background: white;
+}
+
+.navbar-brand {
+    background-color: #4aaaa5;
+    color: white;
+    Padding: 10px 60px;
+}
+
+.nav-link {
+    color: #4aaaa5;
+    text-decoration: none;
+}
+
+.wrapper {
+    background: url("../images/grunge.png");
+    border-top: 1px solid #4aaaa5;
+}
+
+.container {
+    width: 960px; 
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    background: white;
 }
 
 
+/* .row {
+    background: white;
+} */
+
 
 /* formatting for the name */
-
+/* 
 header {
     margin-top: 0;
     margin-left: 0px;
@@ -35,16 +83,18 @@ header {
     color: #ffffff;
     padding: 10px 20px;
     border: 2px solid #f2f2f2;
-}
+} */
 
 /* float for the navigation bar */
 
-.nav {
+.nav-link {
     float: right;
+    color: #4aaaa5;
+    text-decoration: none;
 }
 
 /* fine tuning for each button inside navigation bar */
-
+/* 
 .links {
     display: inline-block;
     text-align: center;
@@ -53,11 +103,11 @@ header {
     width: 70px;
     padding: 10px 0px 10px 0px;
     margin-top: 30px;
-}
+} */
 
 /* formatting for all links */
 
-a {
+/* a {
     margin-right: 0;
     float: right;
     font-size: 18 px;
@@ -65,19 +115,26 @@ a {
     display: inline;
     text-decoration: none;
     Padding-top: 40px;
-}
+} */
 
 /* about, portfolio, and contact */
 
 #h2 {
-    padding: 1px 10px 10px 25px;
+    padding: 40px 10px 10px;
     color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 /* wrapper that holds the dark grey image background */
 
-.container1 {
+/* .container {
+    width: 100%;
+    height: 100%;
+
+} */
+
+
+/* section {
     font-size: 16px;
     line-height: 150%;
     clear: both;
@@ -90,12 +147,12 @@ a {
     margin-top: 100px;
     margin-bottom: 20px;
     background-image: url("../images/grunge.png") no-repeat fixed center;
-}
+} */
 
 /* information section with white background */
 
 .bio {
-    clear: both;
+    /* clear: both;
     padding: 70px 40px 40px 20px;
     background: #ffffff;
     Margin-top: 20px;
@@ -105,29 +162,29 @@ a {
     min-height: 400px;
     margin-bottom: 300px;
     padding: 15px;
-    border: 1px solid #dddddd;
+    border: 1px solid #dddddd; */
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     weight: bold;
 }
 
 /* float and spacing for headshot */
-
+/* 
 #headshot {
     float: left;
     padding: 20px 50px 5px 50px;
-}
+} */
 
 /* Fix for scrolling issue with paragraphs and padding */
 
-p {
+/* p {
     overflow: auto;
-}
+} */
 
-#watercolor {
+/* #watercolor {
     margin-left: 315px;
     margin-top: 20px;
     width: 30%;
-}
+} */
 
 /* footer at the bottom of the page */
 
@@ -148,19 +205,19 @@ footer {
     border-top: 8px solid #4aaaa5;
     padding: 18px 10px 0px 10px;
     z-index: 100;
-    overflow: auto;
+    /* overflow: auto; */
 }
 
 /* portfolio image links */
 
-.images {
+/* .images {
     margin: 0 auto;
     position: relative;
     height: 900px;
-}
+} */
 
 /* positioning for the pictures */
-
+/* 
 .box1 {
     position: absolute;
     float: left;
@@ -169,10 +226,10 @@ footer {
     margin-left: 30px;
     margin-right: 30px;
     z-index: 5;
-}
+} */
 
 /* formatting for the text boxes that lay on top of the image links */
-
+/* 
 .title {
     position: absolute;
     clear: both;
@@ -188,76 +245,76 @@ footer {
     weight: bolder;
     color: #ffffff;
     background: #4aaaa5;
-}
+} */
 
 /* text for first image */
 
-.box2 {
+/* .box2 {
     left: 0;
-}
+} */
 
 /* text for second image */
 
-.box3 {
+/* .box3 {
     left: 280px;
-}
+} */
 
 /* text for third image */
 
-.box4 {
+/* .box4 {
     left: 0;
     top: 600px;
-}
+} */
 
 /* text for fourth image */
 
-.box5 {
+/* .box5 {
     left: 280px;
     top: 300px;
-}
+} */
 
 /* text for fifth image */
 
-.box6 {
+/* .box6 {
     left: 0;
     top: 300px;
-}
+} */
 
 /* placement for image link  */
 
-.image1 {
+/* .image1 {
     left: -80px;
-}
+} */
 
 /* placement for image link */
 
-.image2 {
+/* .image2 {
     left: 200px;
-}
+} */
 
 /* placement for image link */
 
-.image3 {
+/* .image3 {
     left: -80px;
     top: 300px;
-}
+} */
 
 /* placement for image link */
 
-.image4 {
+/* .image4 {
     left: 200px;
     top: 300px;
-}
+} */
 
 /* placement for image link */
 
-.image5 {
+/* .image5 {
     left: -80px;
     top: 600px;
-}
+} */
 
 /* style for input boxes inspired by the formatting at https://www.w3schools.com/howto/howto_css_contact_form.asp*/
-
+/* 
 input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
@@ -267,10 +324,10 @@ input[type=text], select, textarea {
     margin-top: 6px;
     margin-bottom: 16px;
     resize: vertical;
-}
+} */
 
 /* style for submit boxes inspired by the formatting at https://www.w3schools.com/howto/howto_css_contact_form.asp*/
-
+/* 
 input[type=submit] {
     background-color: #4aaaa5;
     color: white;
@@ -278,39 +335,39 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
+} */
 
 /* When moving the mouse over the submit button, add a darker teal color */
 
 /* inspired by the formatting at https://www.w3schools.com/howto/howto_css_contact_form.asp */
 
-input[type=submit]:hover {
+/* input[type=submit]:hover {
     background-color: rgb(214, 101, 95);
     transition: 0.25s;
-}
+} */
 
 /* Add a background color and some padding around the form */
 
 /* inspired by the formatting at https://www.w3schools.com/howto/howto_css_contact_form.asp */
-
+/* 
 .container {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-}
+} */
 
 /* changes navigation links to coral when hovering */
 
-a:hover {
+/* a:hover {
     color: rgb(206, 104, 98);
     weight: bolder;
     transition: 0.5s;
     font-size: 105%;
     opacity: 0.25;
-}
+} */
 
-.title:hover {
+/* .title:hover {
     background: rgb(238, 155, 151);
     weight: bolder;
     transition: 0.5s;
-}
+} */
