--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,24 +19,23 @@ body {
     line-height: 34px;
     color: #777;
     background: white;
-    height:100%;
+    height: 100%;
     width: 100%;
-  }
+}
 
-  * {
+* {
     box-sizing: border-box;
     margin: 0;
-  }
+}
 
-html,
-body {
-  height: 100%;
+html, body {
+    height: 100%;
 }
 
 /* formatting for just the top of the page including name and navigation bar */
 
 #top {
-    width: 960px; 
+    width: 960px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
@@ -44,6 +43,7 @@ body {
 }
 
 .navbar-brand {
+    font-family: Georgia, Times, "Times New Roman", serif;
     background-color: #4aaaa5;
     color: white;
     Padding: 10px 60px;
@@ -60,20 +60,19 @@ body {
 }
 
 .container {
-    width: 960px; 
+    width: 960px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
     background: white;
 }
 
-
 /* .row {
     background: white;
 } */
 
-
 /* formatting for the name */
+
 /* 
 header {
     margin-top: 0;
@@ -94,6 +93,7 @@ header {
 }
 
 /* fine tuning for each button inside navigation bar */
+
 /* 
 .links {
     display: inline-block;
@@ -133,7 +133,6 @@ header {
 
 } */
 
-
 /* section {
     font-size: 16px;
     line-height: 150%;
@@ -163,11 +162,12 @@ header {
     margin-bottom: 300px;
     padding: 15px;
     border: 1px solid #dddddd; */
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: Georgia, Times, "Times New Roman", serif;
     weight: bold;
 }
 
 /* float and spacing for headshot */
+
 /* 
 #headshot {
     float: left;
@@ -189,23 +189,27 @@ header {
 /* footer at the bottom of the page */
 
 footer {
-    display: flex;
+    /* display: flex;
     align-items: flex-end;
     justify-content: center;
     clear: both;
-    position: fixed;
+    position: fixed; */
     background: #666666;
     color: #ffffff;
-    bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
+    /* bottom: 0; */
+    margin-top: 20px;
     width: 100vw;
-    text-align: center;
-    font-size: 12px;
+    /* text-align: center;
+    font-size: 12px; */
     border-top: 8px solid #4aaaa5;
-    padding: 18px 10px 0px 10px;
-    z-index: 100;
+    /* padding: 18px 10px 0px 10px;
+    z-index: 100; */
     /* overflow: auto; */
+}
+
+.foot {
+    background: #666666;
+    padding: 18px 10px 0px 10px;
 }
 
 /* portfolio image links */
@@ -217,6 +221,7 @@ footer {
 } */
 
 /* positioning for the pictures */
+
 /* 
 .box1 {
     position: absolute;
@@ -229,6 +234,7 @@ footer {
 } */
 
 /* formatting for the text boxes that lay on top of the image links */
+
 /* 
 .title {
     position: absolute;
@@ -314,7 +320,7 @@ footer {
 } */
 
 /* style for input boxes inspired by the formatting at https://www.w3schools.com/howto/howto_css_contact_form.asp*/
-/* 
+
 input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
@@ -324,10 +330,10 @@ input[type=text], select, textarea {
     margin-top: 6px;
     margin-bottom: 16px;
     resize: vertical;
-} */
+}
 
 /* style for submit boxes inspired by the formatting at https://www.w3schools.com/howto/howto_css_contact_form.asp*/
-/* 
+
 input[type=submit] {
     background-color: #4aaaa5;
     color: white;
@@ -335,20 +341,21 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-} */
+}
 
 /* When moving the mouse over the submit button, add a darker teal color */
 
 /* inspired by the formatting at https://www.w3schools.com/howto/howto_css_contact_form.asp */
 
-/* input[type=submit]:hover {
+input[type=submit]:hover {
     background-color: rgb(214, 101, 95);
     transition: 0.25s;
-} */
+}
 
 /* Add a background color and some padding around the form */
 
 /* inspired by the formatting at https://www.w3schools.com/howto/howto_css_contact_form.asp */
+
 /* 
 .container {
     border-radius: 5px;
@@ -358,13 +365,13 @@ input[type=submit] {
 
 /* changes navigation links to coral when hovering */
 
-/* a:hover {
+.nav-link:hover {
     color: rgb(206, 104, 98);
     weight: bolder;
     transition: 0.5s;
     font-size: 105%;
-    opacity: 0.25;
-} */
+    opacity: 0.50;
+}
 
 /* .title:hover {
     background: rgb(238, 155, 151);
