--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,12 +199,13 @@ footer {
     /* bottom: 0; */
     margin-top: 20px;
     width: 100vw;
-    /* text-align: center;
-    font-size: 12px; */
+    text-align: center;
+    font-size: 12px;
     border-top: 8px solid #4aaaa5;
     /* padding: 18px 10px 0px 10px;
     z-index: 100; */
     /* overflow: auto; */
+   
 }
 
 .foot {
@@ -214,44 +215,46 @@ footer {
 
 /* portfolio image links */
 
-/* .images {
-    margin: 0 auto;
+.images {
+
     position: relative;
-    height: 900px;
-} */
+
+}
 
 /* positioning for the pictures */
 
-/* 
+
 .box1 {
-    position: absolute;
-    float: left;
-    width: 230px;
-    padding: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
-    z-index: 5;
-} */
+    /* position: absolute; */
+    width: 225px;
+    z-index: 2;
+    margin-bottom: 20px;
+    clear: both;
+}
 
 /* formatting for the text boxes that lay on top of the image links */
 
-/* 
+
 .title {
-    position: absolute;
+    /* position: absolute;
     clear: both;
-    overflow: auto;
-    width: 190px;
+    overflow: auto; */
+    position: absolute;
+    height: 50px;
+    width: 225px;
     padding: 10px 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 220px;
+    margin-top: 175px;
+  /* margin-bottom: 100px; */
     z-index: 99;
     text-align: center;
     font-size: 20px;
     weight: bolder;
     color: #ffffff;
     background: #4aaaa5;
-} */
+    clear: both;
+    top: -265px;
+    left: 15px;
+}
 
 /* text for first image */
 
@@ -382,8 +385,20 @@ input[type=submit]:hover {
     color: rgb(206, 104, 98);
     transition: 0.5s;
 }
+
+.title:hover {
+    color: rgb(160, 45, 39);
+    background:rgb(238, 195, 192);
+    transition: 0.5s;
+    opacity: 0.7;
 }
 
+.box1:hover {
+    color: rgb(206, 104, 98);
+    weight: bolder;
+    transition: 0.5s;
+    opacity: 0.50;
+}
 /* .title:hover {
     background: rgb(238, 155, 151);
     weight: bolder;
