--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ html, body {
 
 .bio {
     font-family: Georgia, Times, "Times New Roman", serif;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 footer {
@@ -76,8 +76,13 @@ footer {
     margin-top: 20px;
     width: 100vw;
     text-align: center;
-    font-size: 12px;
+    font-size: 16px;
     border-top: 8px solid #4aaaa5;
+}
+
+a{
+    color:#ffffff;
+    font-weight: bolder;
 }
 
 .foot {
